fixed a pathing issue under mac os

--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -14,7 +14,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-#log4j.rootLogger=DEBUG, stdlog
+#log4j.rootLogger=DEBUG, stdlog, file
 log4j.rootLogger=INFO, stdlog
 
 log4j.appender.stdlog=org.apache.log4j.ConsoleAppender
@@ -42,3 +42,11 @@ log4j.logger.org.openjena.riot=INFO
 
 ## For conll-rdf - uncomment for logging only WARN and above for the acoli package
 #log4j.logger.org.acoli.conll.rdf=WARN, stdlog 
+
+## Log to a file
+#log4j.appender.file=org.apache.log4j.RollingFileAppender
+#log4j.appender.file.File=conll-rdf.log
+#log4j.appender.file.MaxFileSize=6MB
+#log4j.appender.file.MaxBackupIndex=1
+#log4j.appender.file.layout=org.apache.log4j.PatternLayout
+#log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
