Exclude Eclipse project files, keeping them intact
gitignore .project and .classpath
Ensure non-maven compilation with javac will not be affected

--- a/.gitignore
+++ b/.gitignore
@@ -10,9 +10,8 @@ buildNumber.properties
 
 # Eclipse
 # .classpath and .project should be excluded but are still required for non-maven compilation
-# TODO remove build artifacts from committed .classpath and .project, then uncomment these lines
-# .classpath
-# .project
+.classpath
+.project
 .settings/
 .recommenders
 .metadata
