--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,12 @@
       <artifactId>jackson-databind</artifactId>
       <version>2.12.3</version>
     </dependency>
+    <dependency>
+      <groupId>uk.org.webcompere</groupId>
+      <artifactId>model-assert</artifactId>
+      <version>1.0.0</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
